--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="yandex-verification" content="87ff2d55d053c061" />
     <link rel='icon' href='favicon.ico' />
     <title>Way To Maldives</title>
 </head>
