--- a/index.html
+++ b/index.html
@@ -1,19 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta name="yandex-verification" content="87ff2d55d053c061" />
-    <link rel='icon' href='favicon.ico' />
-    <title>Way To Maldives</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>My Vue app with webpack 4</title>
 </head>
 <body>
-<noscript>
-    <strong>We're sorry but <%= webpackConfig.name %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-</noscript>
 <div id="app"></div>
-WAY TO MALDIVES
+<script src="dist/main.js" type="text/javascript"></script>
 </body>
 </html>
