--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="yandex-verification" content="87ff2d55d053c061" />
+    <link rel='icon' href='favicon.ico' />
     <title>My Vue app with webpack 4</title>
 </head>
 <body>
+<noscript>
+    <strong>We're sorry but <%= webpackConfig.name %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+</noscript>
 <div id="app"></div>
 <script src="dist/main.js" type="text/javascript"></script>
 </body>
