--- a/index.html
+++ b/index.html
@@ -1,18 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta name="yandex-verification" content="87ff2d55d053c061" />
-    <link rel='icon' href='favicon.ico' />
-    <title>My Vue app with webpack 4</title>
-</head>
-<body>
-<noscript>
-    <strong>We're sorry but <%= webpackConfig.name %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-</noscript>
-<div id="app"></div>
-<script src="dist/main.js" type="text/javascript"></script>
-</body>
-</html>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/favicon.ico><title>way-to-maldives-dev</title><link href=/js/about.aaad9613.js rel=prefetch><link href=/css/app.aedd3d49.css rel=preload as=style><link href=/js/app.6ea39f84.js rel=preload as=script><link href=/js/chunk-vendors.e9885347.js rel=preload as=script><link href=/css/app.aedd3d49.css rel=stylesheet></head><body><noscript><strong>We're sorry but way-to-maldives-dev doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.e9885347.js></script><script src=/js/app.6ea39f84.js></script></body></html>
